[package]
name = "iwdb"
version = "0.1.0"
authors = ["bocc <szevasztavasz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.3"
hyper-tls = "0.4.1"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http-serde = "1.0.1"
bytes = { version = "0.5", features = ["serde"] }
toml = "0.5.6"
futures = "0.3.4"